test/bad/generics/call01.px

func f<T>(T x, T y) def
    return

f(0, 0.0)
